--- a/code/src/main/resources/application.properties
+++ b/code/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.show-sql=false
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.open-in-view=false
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
@@ -21,3 +22,7 @@ spring.thymeleaf.cache=false
 threads-decode = 3
 threads-slice = 3
 threads-scrap = 3
+
+page-fetcher.cacheDirectory=/tmp/vatscraper/cache
+page-fetcher.connect-time-out=9s
+page-fetcher.cache-size=200MB
